fix (puconvocation-com): Fix an issue in which scrollbars was overlapping the seats in the Seat Map.

--- a/frontend/websites/puconvocation-com/src/app/globals.css
+++ b/frontend/websites/puconvocation-com/src/app/globals.css
@@ -72,3 +72,13 @@
         @apply bg-background text-foreground;
     }
 }
+
+
+.no-scrollbar {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.no-scrollbar::-webkit-scrollbar, body::-webkit-scrollbar-button {
+    display: none;
+}
